--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -14,6 +14,11 @@
   margin-bottom: 5px;
   display: inline-flex;
 }
+@media screen and (max-width: 768px) {
+  .ncpi .pi-list-single-head .pi-list-content h3 {
+    font-size: 20px;
+  }
+}
 .ncpi .pi-list-single-head .pi-list-content h3 .pi-btn {
   border: 1px solid #dddddda8;
   margin-left: 20px;
@@ -43,6 +48,11 @@
 .ncpi .pi-list-single-head-two {
   padding: 30px 30px 20px;
 }
+@media screen and (max-width: 420px) {
+  .ncpi .pi-list-single-head-two {
+    padding: 15px;
+  }
+}
 .ncpi .pi-list-single-head-two .pi-list-content {
   display: block;
 }
@@ -57,6 +67,12 @@
   display: flex;
   justify-content: right;
   align-items: center;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-list-single-button-content .pi-select {
+    margin-bottom: 15px;
+    margin-top: 20px;
+  }
 }
 .ncpi .pi-list-single-button-content .pi-select label {
   font-size: 14px;
@@ -76,11 +92,17 @@
   left: 3px;
   text-align: left;
 }
-.ncpi .pi-list-single-button-content button {
+.ncpi .pi-list-single-button-content .pi-btn {
   background-color: #fff;
   color: #4A5568;
   margin-left: 5px;
   border-radius: 4px;
+}
+@media screen and (max-width: 420px) {
+  .ncpi .pi-list-single-button-content .pi-btn {
+    padding: 10px !important;
+    margin-bottom: 10px;
+  }
 }
 .ncpi .pi-list-single-button-content .pi-action-btn {
   float: right;
@@ -104,6 +126,11 @@
   border: 1px solid #dddddda8;
   border-top: none;
   border-radius: 0 0 8px 8px;
+}
+@media screen and (max-width: 420px) {
+  .ncpi .pi-tag-content {
+    padding: 20px;
+  }
 }
 .ncpi .pi-tag-content .pi-budget span {
   color: #718096;
@@ -137,6 +164,7 @@
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content {
     display: inline-block;
+    width: 100%;
   }
 }
 .ncpi .pi-tag-content ul {
@@ -285,6 +313,11 @@
 .ncpi .pi-tab-buttons .pi-dropdown-content img {
   margin-right: 10px;
 }
+@media screen and (max-width: 550px) {
+  .ncpi .pi-small-button-group .col-sm-5 {
+    order: 2;
+  }
+}
 .ncpi .pi-small-button-group .pi-btn-small {
   color: #718096 !important;
   font-weight: 500;
@@ -423,7 +456,7 @@
 .ncpi .pi-avatar-content .pi-avatar-text h5 {
   line-height: 140%;
   color: #4A5568;
-  font-weight: 500;
+  font-weight: 600;
 }
 .ncpi .pi-avatar-content .pi-avatar-text p {
   color: #425466;
@@ -489,6 +522,11 @@
 }
 .ncpi .pi-accordion {
   margin-top: 15px;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-accordion {
+    width: 130%;
+  }
 }
 .ncpi .pi-accordion input[type=radio] {
   display: none;
