--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -819,7 +819,7 @@ html {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.06);
   display: flex;
 }
-@media screen and (max-width: 420) {
+@media screen and (max-width: 420px) {
   .ncpi .pi-table-action {
     display: block;
   }
@@ -827,7 +827,7 @@ html {
 .ncpi .pi-table-action .pi-small-button-group {
   margin-left: auto;
 }
-@media screen and (max-width: 420) {
+@media screen and (max-width: 420px) {
   .ncpi .pi-table-action .pi-small-button-group {
     margin-top: 15px;
   }
@@ -955,6 +955,13 @@ html {
 @media screen and (max-width: 550px) {
   .ncpi .pi-info-table-content {
     overflow-x: scroll;
+    padding-bottom: 20px;
+  }
+  .ncpi .pi-table-wrap {
+    overflow-x: scroll;
+  }
+  .ncpi .pi-table-wrap .pi-table {
+    width: 190%;
   }
 }
 .ncpi .pi-table-two tr th .pi-project {
@@ -1003,6 +1010,11 @@ html {
 .ncpi .pi-table-three td:nth-child(n+3),
 .ncpi .pi-table-three th:nth-child(n+3) {
   text-align: center;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-table-three {
+    width: 130% !important;
+  }
 }
 .ncpi .pi-table-four tbody tr td .pi-list-title {
   font-weight: 600;
@@ -1091,6 +1103,11 @@ html {
 .ncpi .pi-accordion-table-list ul li .pi-dropdown-content {
   top: 30px;
   left: -70px;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-accordion-table-list {
+    width: 150%;
+  }
 }
 .ncpi .pi-info-table-content {
   margin-top: 20px;
@@ -1215,12 +1232,32 @@ html {
 .ncpi .pi-info-table-content .pi-info-table tr td:nth-child(2) select {
   border-radius: 0 4px 4px 0;
 }
+@media screen and (max-width: 550px) {
+  .ncpi .pi-info-table-content .pi-info-table {
+    width: 145% !important;
+  }
+}
 .ncpi .pi-info-table-content .pi-btn {
   width: 100%;
   color: #2D3748 !important;
   border: 1px solid rgba(221, 221, 221, 0.6588235294);
   font-weight: 500;
   border-radius: 4px;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-info-table-content .pi-btn {
+    width: 145%;
+  }
+}
+@media screen and (max-width: 420px) {
+  .ncpi .pi-info-table-content .pi-btn {
+    width: 162%;
+  }
+}
+@media screen and (max-width: 390px) {
+  .ncpi .pi-info-table-content .pi-btn {
+    width: 177%;
+  }
 }
 .ncpi .pi-calculation {
   margin-top: 15px;
@@ -1272,6 +1309,12 @@ html {
   margin-left: 5px;
   outline: none;
   line-height: 100%;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-calculation .col-sm-4 {
+    order: 2;
+    margin-bottom: 20px;
+  }
 }
 
 /*-------------------------------------------------------------- 
@@ -1410,6 +1453,12 @@ html {
   padding: 200px 0 150px;
   margin-bottom: 225px;
 }
+@media screen and (max-width: 550px) {
+  .ncpi .pi-empty-content {
+    padding: 90px 0 150px;
+    margin-bottom: 80px;
+  }
+}
 .ncpi .pi-empty-content .pi-empty-title {
   font-size: 20px;
   font-weight: 700;
@@ -1545,6 +1594,9 @@ html {
 @media screen and (max-width: 992px) {
   .ncpi .pi-cards .pi-cards-content {
     margin-bottom: 15px;
+  }
+  .ncpi .pi-cards .col-md-6.col-lg:last-child .pi-cards-content {
+    margin-bottom: 0px;
   }
 }
 @media screen and (max-width: 500px) {
@@ -1849,6 +1901,11 @@ html {
   margin-top: 55px;
   margin-right: -30px;
 }
+@media screen and (max-width: 992px) {
+  .ncpi .pi-pagination-content-two .pi-pagination {
+    margin-bottom: 20px;
+  }
+}
 .ncpi .pi-pagination {
   display: inline-flex;
   float: right;
@@ -1941,6 +1998,9 @@ html {
     font-size: 12px;
   }
 }
+.ncpi .pi-top-menu-content .pi-dropdown {
+  position: relative;
+}
 @media screen and (max-width: 992px) {
   .ncpi .pi-top-menu-content .pi-dropdown {
     margin-right: 0px;
@@ -1956,8 +2016,14 @@ html {
   }
 }
 .ncpi .pi-top-menu-content .pi-dropdown-content {
-  top: 57px;
-  left: 14px;
+  top: 55px;
+  left: 10px;
+}
+@media screen and (max-width: 420px) {
+  .ncpi .pi-top-menu-content .pi-dropdown-content {
+    top: 45px;
+    left: -5px;
+  }
 }
 .ncpi .pi-dropdown-content {
   display: none;
@@ -2449,6 +2515,11 @@ ul {
   padding: 45px 50px 45px;
   background: linear-gradient(180deg, #FFFFFF 0%, #F8F8FA 100%);
 }
+@media screen and (max-width: 550px) {
+  .ncpi .pi-modal-content .pi-modal-header {
+    padding: 25px;
+  }
+}
 .ncpi .pi-modal-content .pi-modal-header p {
   margin: 0;
   padding-top: 15px;
@@ -2466,11 +2537,16 @@ ul {
 }
 @media screen and (max-width: 550px) {
   .ncpi .pi-modal-content .pi-content {
-    padding: 5px 20px 20px;
+    padding: 0px 25px 20px !important;
   }
 }
 .ncpi .pi-modal-content .pi-modal-footer {
   padding: 0 50px 45px;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-modal-content .pi-modal-footer {
+    padding: 0 25px 45px;
+  }
 }
 .ncpi .pi-modal-content .pi-modal-footer .pi-btn {
   background-color: #fff;
@@ -2518,7 +2594,7 @@ ul {
     width: 70%;
   }
   .ncpi .pi-modal-content {
-    width: 70%;
+    width: 70% !important;
   }
 }
 .ncpi .pi-modal-style-two .pi-modal-header {
@@ -2650,7 +2726,13 @@ ul {
 }
 @media screen and (max-width: 992px) {
   .ncpi .pi-modal-sidebar .pi-content {
-    padding: 20px 40px 15px 25px;
+    padding: 20px 25px 15px;
+    height: calc(100vh - 208px);
+  }
+}
+@media screen and (max-width: 992px) {
+  .ncpi .pi-modal-sidebar .pi-content {
+    height: calc(100vh - 202px);
   }
 }
 .ncpi .pi-modal-sidebar .pi-close {
@@ -2679,6 +2761,11 @@ ul {
   font-size: 24px !important;
   font-weight: 500;
   padding: 13px 20px !important;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-modal-sidebar .pi-title-field {
+    font-size: 16px !important;
+  }
 }
 .ncpi .pi-modal-sidebar .pi-action-content {
   display: inline;
@@ -2726,6 +2813,11 @@ ul {
   display: flex;
   cursor: pointer;
 }
+@media screen and (max-width: 420px) {
+  .ncpi .pi-modal-sidebar-two .pi-buttons .pi-btn:first-child {
+    margin-bottom: 10px;
+  }
+}
 .ncpi .pi-modal-sidebar-two .pi-checklist-content ul {
   margin-bottom: 0px;
   padding-top: 15px;
@@ -2772,7 +2864,7 @@ ul {
   left: -65px;
 }
 .ncpi .pi-modal-sidebar-two .pi-content {
-  height: calc(100vh - 108px);
+  height: calc(100vh - 78px);
 }
 .ncpi .pi-modal-sidebar input[type=range] {
   margin-top: 0;
@@ -3011,6 +3103,8 @@ ul {
 @media screen and (min-width: 1025px) {
   .ncpi .pi-single-tabs {
     margin-top: -30px;
+    z-index: 9;
+    position: relative;
   }
 }
 @media screen and (max-width: 992px) {
@@ -3317,6 +3411,11 @@ ul {
   font-size: 13px;
   font-weight: 500;
   padding-left: 45px;
+}
+@media screen and (max-width: 820px) {
+  .ncpi .pi-settings-tab .pi-settings-subtabs .pi-subtab a {
+    padding-left: 30px;
+  }
 }
 .ncpi .pi-settings-tab .pi-settings-subtabs .pi-subtab a:hover,
 .ncpi .pi-settings-tab .pi-settings-subtabs .pi-subtab.pi-active a {
@@ -4109,6 +4208,9 @@ ul {
 .ncpi .pi-mt-m-10 {
   margin-top: -10px;
 }
+.ncpi .pi-mt-m-5 {
+  margin-top: -5px;
+}
 .ncpi .pi-ml-10 {
   margin-left: 10px;
 }
@@ -4129,9 +4231,6 @@ ul {
 }
 .ncpi .pi-mt-30 {
   margin-top: 30px;
-}
-.ncpi .pi-py70-px30 {
-  padding: 30px 70px;
 }
 .ncpi .pi-z-2 {
   z-index: 2;
@@ -4394,6 +4493,11 @@ select {
   border-radius: 8px;
   outline: none;
 }
+@media screen and (max-width: 420px) {
+  .ncpi .pi-form-style-one textarea {
+    height: 80px !important;
+  }
+}
 .ncpi .pi-form-style-one label {
   font-size: 14px;
   color: #718096;
@@ -4414,6 +4518,15 @@ select {
   outline: none;
   line-height: 100%;
   line-height: 100%;
+}
+@media screen and (max-width: 550px) {
+  .ncpi .pi-form-style-one select,
+.ncpi .pi-form-style-one input[type=url],
+.ncpi .pi-form-style-one input[type=number],
+.ncpi .pi-form-style-one input[type=email],
+.ncpi .pi-form-style-one input[type=text] {
+    padding: 10px !important;
+  }
 }
 .ncpi .pi-form-style-one textarea:focus,
 .ncpi .pi-form-style-one select:focus,
@@ -4615,12 +4728,17 @@ select {
   background-color: #f7f8fa;
 }
 .ncpi .pi-left-sidebar .pi-logo-content {
-  padding: 19px 30px;
+  padding: 18px 30px;
   z-index: 9;
   background: #fff;
   width: 100%;
   border-bottom: 1px solid #dddddd36;
   position: fixed;
+}
+@media screen and (max-width: 420px) {
+  .ncpi .pi-left-sidebar .pi-logo-content {
+    padding: 11px 30px;
+  }
 }
 .ncpi .pi-left-sidebar .pi-sidebar-menu {
   margin: 0;
