--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1450,8 +1450,8 @@ html {
   }
 }
 .ncpi .pi-empty-content {
-  padding: 200px 0 150px;
-  margin-bottom: 225px;
+  padding: 150px 0 150px;
+  // margin-bottom: 225px;
 }
 @media screen and (max-width: 550px) {
   .ncpi .pi-empty-content {
