--- a/src/admin/js/react/inv-template/scss/loading.css
+++ b/src/admin/js/react/inv-template/scss/loading.css
@@ -1,10 +1,11 @@
-.spinner.loading {
+/* preloader */
+.pi-preloader {
     padding: 50px;
     position: relative;
     text-align: center;
 }
 
-.spinner.loading:before {
+.pi-preloader:before {
     content: "";
     height: 40px;
     width: 40px;
@@ -16,10 +17,10 @@
     border-style: solid;
     border-color: #2180c0 #ccc #ccc;
     border-radius: 100%;
-    animation: rotation .7s infinite linear;
+    animation: pi-rotation .7s infinite linear;
 }
 
-@keyframes rotation {
+@keyframes pi-rotation {
     from {
         transform: rotate(0deg);
     } to {
