--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -158,14 +158,14 @@ input:-webkit-autofill:active {
     -webkit-box-shadow: 0 0 0 30px white inset !important;
 } 
 
-// preloader spinner
-.spinner.loading {
+// preloader
+.pi-preloader {
     padding: 50px;
     position: relative;
     text-align: center;
 }
 
-.spinner.loading:before {
+.pi-preloader:before {
     content: "";
     height: 40px;
     width: 40px;
@@ -177,10 +177,10 @@ input:-webkit-autofill:active {
     border-style: solid;
     border-color: #2180c0 #ccc #ccc;
     border-radius: 100%;
-    animation: rotation .7s infinite linear;
+    animation: pi-rotation .7s infinite linear;
 }
 
-@keyframes rotation {
+@keyframes pi-rotation {
     from {
         transform: rotate(0deg);
     } to {
