working with addi field

--- a/src/admin/js/react/components/invoice/single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/single/style.scoped.scss
@@ -84,7 +84,7 @@
 }
 @media screen and (max-width: 420px) {
   .ncpi .pi-info-content {
-    padding: 15px 0px;
+    padding: 15px;
   }
 }
 .ncpi .pi-add-info-content {
