--- a/src/admin/js/react/components/invoice/single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/single/style.scoped.scss
@@ -82,9 +82,9 @@
   padding: 35px 30px;
   border-radius: 8px;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 550px) {
   .ncpi .pi-info-content {
-    padding: 15px;
+    padding: 20px 15px;
   }
 }
 .ncpi .pi-add-info-content {
@@ -304,7 +304,7 @@
   }
 
   .pi-from-content {
-    padding: 35px 0px !important;
+    padding: 20px 15px !important;
   }
 }
 .ncpi .pi-inv-sections .pi-group-input {
