--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -419,11 +419,75 @@ html {
   padding-left: 0;
 }
 
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
-.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
-.col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
-.col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
-.col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12,
+.col,
+.col-auto,
+.col-sm-1,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-sm,
+.col-sm-auto,
+.col-md-1,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-md,
+.col-md-auto,
+.col-lg-1,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-lg,
+.col-lg-auto,
+.col-xl-1,
+.col-xl-2,
+.col-xl-3,
+.col-xl-4,
+.col-xl-5,
+.col-xl-6,
+.col-xl-7,
+.col-xl-8,
+.col-xl-9,
+.col-xl-10,
+.col-xl-11,
+.col-xl-12,
+.col-xl,
 .col-xl-auto {
   position: relative;
   width: 100%;
@@ -1145,6 +1209,11 @@ html {
 .ncpi .pi-info-table-content .pi-info-table tbody tr td {
   padding: 15px 0 15px 15px;
 }
+@media screen and (max-width: 550px) {
+  .ncpi .pi-info-table-content .pi-info-table tbody tr td {
+    padding: 10px 0 10px 10px;
+  }
+}
 .ncpi .pi-info-table-content .pi-info-table tbody tr.pi-active {
   background: #FAFAFB;
   border-radius: 5px;
@@ -1152,13 +1221,6 @@ html {
 .ncpi .pi-info-table-content .pi-info-table tbody tr td:last-child {
   padding: 12px;
   width: 0px;
-}
-.ncpi .pi-info-table-content .pi-info-table tbody tr td:nth-last-child(2) {
-  width: 105px !important;
-}
-.ncpi .pi-info-table-content .pi-info-table tbody tr td:nth-child(3) input[type=number] {
-  width: 100px;
-  font-size: 12px;
 }
 .ncpi .pi-info-table-content .pi-info-table td:first-child input[type=text] {
   width: 100%;
@@ -1366,7 +1428,6 @@ html {
 @media screen and (max-width: 992px) {
   .ncpi .pi-width-content {
     padding: 0;
-    justify-content: space-between;
   }
 }
 .ncpi .pi-top-menu-content {
@@ -1647,7 +1708,8 @@ html {
   font-weight: 500;
 }
 .ncpi .pi-top-menu-content .pi-search-box {
-  top: -2px;
+  top: -1px;
+  margin-left: -30px;
 }
 @media screen and (max-width: 550px) {
   .ncpi .pi-top-menu-content .pi-search-box .pi-search-input {
@@ -1657,8 +1719,7 @@ html {
 }
 @media screen and (max-width: 420px) {
   .ncpi .pi-top-menu-content .pi-search-box .pi-search-input {
-    width: 0px !important;
-    border: none;
+    width: 145px !important;
   }
 }
 .ncpi .pi-search-box {
@@ -2185,7 +2246,7 @@ input[type=checkbox] {
   margin-top: -10px;
 }
 .wp-admin .pi-accordion-wrapper > ul > li > input[type=checkbox] {
-  height: 91px !important;
+  height: 56px !important;
 }
 .wp-admin .pi-search-bar .pi-total-list p select {
   padding: 0px 20px 0px 4px !important;
@@ -3343,45 +3404,32 @@ ul {
 }
 .ncpi .pi-payment-tab .pi-tab {
   cursor: pointer;
-  padding: 12px 15px;
-  margin-right: 15px;
-  background-color: var(--bg-color-air-white);
-  border-radius: 8px;
-  border-top: 3px solid var(--bg-color-air-white);
-  font-size: 14px;
+  padding: 5px 10px;
+  margin-right: 25px;
+  border-bottom: 3px solid #fff;
+  font-size: 16px;
   font-weight: 500;
-  display: grid;
+  display: flex;
+  align-items: center;
+  color: #4A5568;
 }
 .ncpi .pi-payment-tab .pi-tab svg {
   display: block;
   font-size: 12px;
   font-weight: 500;
-  margin-bottom: 5px !important;
   margin: auto;
 }
 .ncpi .pi-payment-tab .pi-tab span {
+  border-radius: 8px;
   font-size: 18px;
   font-weight: 700;
-  line-height: 50px;
+  padding: 8px;
+  background: #EDF2F7;
+  margin-right: 10px;
 }
 .ncpi .pi-payment-tab .pi-tab:hover,
 .ncpi .pi-payment-tab .pi-tab.pi-active {
-  border-top: 3px solid var(--bg-color-blue);
-  position: relative;
-}
-.ncpi .pi-payment-tab .pi-tab:hover:before,
-.ncpi .pi-payment-tab .pi-tab.pi-active:before {
-  position: absolute;
-  content: "";
-  width: 0;
-  height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-top: 12px solid var(--bg-color-air-white);
-  left: 0;
-  margin: auto;
-  right: 0;
-  bottom: -11px;
+  border-bottom: 3px solid var(--bg-color-blue);
 }
 .ncpi .pi-setting-tab-content {
   padding: 60px 65px 60px 40px;
@@ -3670,10 +3718,15 @@ ul {
   top: 0px;
   left: 0;
 }
+@media screen and (max-width: 550px) {
+  .pi-form-accordion.pi-additional .pi-radio-content .pi-radio-group input[type=radio] {
+    zoom: 0.9 !important;
+  }
+}
 .pi-form-accordion.pi-additional .pi-radio-content span {
   font-size: 13px;
   position: relative;
-  top: 7px;
+  top: 0px;
   left: 20px;
   color: #718096;
 }
